@@ -1,7 +1,7 @@
 /** \file 
  *
- *  $Date: 2009/02/11 18:23:49 $
- *  $Revision: 1.30 $
+ *  $Date: 2009/07/02 15:22:03 $
+ *  $Revision: 1.31 $
  *  \author N. Amapane - S. Argiro'
  */
 
@@ -82,12 +82,15 @@ namespace edm {
       reader_=
         DaqReaderPluginFactory::get()->create(reader,
   					    pset.getUntrackedParameter<ParameterSet>("readerPset"));
+      reader_->setRunNumber(runNumber_);
     }
     catch(edm::Exception &e) {
       if(e.category() == "Configuration" && reader_ == 0) {
   	reader_ = DaqReaderPluginFactoryU::get()->create(reader);
   	if(reader_ == 0) throw;
-      } else {
+	else reader_->setRunNumber(runNumber_);
+      }
+      else {
         throw;
       }
     }
@@ -277,6 +280,7 @@ namespace edm {
     reset();
     newRun_ = newLumi_ = true;
     runNumber_ = r;
+    if (reader_) reader_->setRunNumber(runNumber_);
     noMoreEvents_ = false;
     resetLuminosityBlockPrincipal();
     resetRunPrincipal();
